syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.api.splnav";

package com.glance.analytics.spaces.client.api.splnav;

// Interactible elements related to preferences
message PreferencesElement {
}
